--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,22 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   google_fonts: ^2.1.0
-  google_maps_flutter_web: ^0.3.1
-  google_maps: ^5.3.0
+  # google_maps_flutter_web: ^0.3.1
+  # google_maps: ^5.3.0
   lottie: ^1.1.0
-  google_maps_flutter_platform_interface: ^2.1.1
+  # google_maps_flutter_platform_interface: ^2.1.1
+  provider: ^6.0.0
+  blur: ^3.0.0
+  flutter_map: ^0.14.0
+  geocoding: ^2.0.1
+  fluttertoast: ^8.0.8
+  http: ^0.13.3
+  pin_code_text_field: ^1.8.0
+  firebase_core: ^1.6.0
+  cloud_firestore: ^2.5.3
+  intl: ^0.17.0
+  google_geocoding: ^0.2.0
+
 
 dev_dependencies:
   flutter_test:
@@ -94,12 +106,12 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 
-dependency_overrides:
-flutter_web:
-  git:
-    url: https://github.com/flutter/flutter_web
-    path: packages/flutter_web
-flutter_web_ui:
-  git:
-    url: https://github.com/flutter/flutter_web
-    path: packages/flutter_web_ui
+# dependency_overrides:
+# flutter_web:
+#   git:
+#     url: https://github.com/flutter/flutter_web
+#     path: packages/flutter_web
+# flutter_web_ui:
+#   git:
+#     url: https://github.com/flutter/flutter_web
+#     path: packages/flutter_web_ui
