--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "walte_soluciones",
-    "short_name": "walte_soluciones",
+    "name": "walter",
+    "short_name": "walter",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
