--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.walte_soluciones">
+    package="com.example.walter">
    <application
-        android:label="walte_soluciones"
+        android:label="walter"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
