--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,8 +52,7 @@ dependencies:
   intl: ^0.17.0
   google_geocoding: ^0.2.0
   logger: ^1.1.0
-
- 
+  flutter_animator: ^3.2.0
 
 
 dev_dependencies:
